fix for example YAML spacing issue

--- a/public/stylesheets/snorby.css
+++ b/public/stylesheets/snorby.css
@@ -878,7 +878,7 @@ pre {
 	text-align: center;
 	overflow: hidden;
 	width: 100%;
-	margin-left: -25px;
+	margin-left: -10px;
 }
 
 #data_count_holder{
